# skyshield-ai

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  ELON_EMAIL.md  NOTICE.md  README.md  STATUS.md  modal_app.py  pyproject.toml
benchmarks/: bench_pc.py  bench_propagate.py
data/: download_cara_fixtures.py  download_celestrak.sh
frontend/: .env.local.example  index.html  next.config.ts  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Chat.tsx  Globe.tsx  LiveAlertsTicker.tsx  Tabs.tsx
frontend/lib/: api.ts  sample-satellites.ts  store.ts  types.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx  Composer.tsx  Header.tsx  Message.tsx  ToolCall.tsx
frontend/src/lib/: api.ts  types.ts
notebooks/: 01_walkthrough.py
skyshield/: cli.py
skyshield/agent/: __init__.py  agent.py  explain.py  monitor.py  system_prompt.md  tools.py
skyshield/agent/tests/: test_agent.py
skyshield/avoid/: __init__.py  dsgp4.py  fleet.py  optimizer.py
skyshield/avoid/tests/: test_avoid.py  test_fleet.py
skyshield/eval/: __init__.py  tracss_compare.py  tracss_report.py  tracss_runner.py
skyshield/pc/: alfano.py  chan.py  foster.py  patera.py
skyshield/propagate/: ephemeris.py  ocm.py  sgp4_jax.py
skyshield/screen/: __init__.py  apogee_perigee.py  octree.py  sfsh_volumes.py  smart_screen.py  vector_screen.py  zorder.py
skyshield/screen/tests/: test_screen.py
skyshield/server/: __init__.py  app.py  cost_tracker.py  live_stream.py  rate_limit.py  ws.py
