[project]
name = "skyshield-ai"
version = "0.1.0"
description = "Open AI agent for satellite safety. Verified physics, plain English."
authors = [{name = "Vidit Patankar", email = "vidit@titan-ai.co"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["satellite", "conjunction", "space", "ai-agent", "orbital-mechanics", "tracss"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "polars>=1.0.0",
    "pydantic>=2.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "anthropic>=0.39.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipython>=8.0.0",
    "matplotlib>=3.9.0",
]

[project.scripts]
skyshield = "skyshield.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skyshield"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "SIM"]
# Bug-catching rules only — stylistic noise is suppressed so CI focuses on real issues.
# E501: line too long (we use 100, prose-comment lines can run over)
# N803/N806: lowercase arg/var name (physics conventions use single-letter caps: M, E, R, etc.)
# SIM105: contextlib.suppress over try/except/pass (occasionally clearer as-is)
# SIM117: combined `with` (we keep separate `with` blocks for readability)
ignore = ["E501", "N803", "N806", "SIM105", "SIM117"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["skyshield", "tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
